added aside element to the exercise

--- a/senses.html
+++ b/senses.html
@@ -15,6 +15,12 @@
                 </ul>
             </nav>
         </header>
+        <aside>
+            <a href="https://en.wikipedia.org/wiki/Cat" target="_blank">Cat on Wikipedia (in English)</a>
+            <a href="https://ang.wikipedia.org/wiki/Catte" target="_blank">Cat on Wikipedia (in Old English)</a>
+            <a href="https://no.wikipedia.org/wiki/Tamkatt" target="_blank">Cat on Wikipedia (in Norwegian)</a>
+            <a href="https://da.wikipedia.org/wiki/Kat" target="_blank">Cat on Wikipedia (in Danish)</a>
+        </aside>
     <main>
         <h1>The cat's senses</h1>
         <h2>Vision</h2>
